force-app/main/default/objects/Case_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Requests</relationshipLabel>
    <relationshipName>Case_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>