force-app/main/default/objects/Case_Request__c/fields/Activate_User_s_NAV__c.field-meta.xml
<CustomField>
    <fullName>Activate_User_s_NAV__c</fullName>
    <label>Activate User(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>