force-app/main/default/objects/Case_Request__c/fields/Allow_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Allow_Downloads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Downloads</label>
    <type>Checkbox</type>
</CustomField>