force-app/main/default/objects/Case_Request__c/fields/Allow_Downloads_TextFormula__c.field-meta.xml
<CustomField>
    <fullName>Allow_Downloads_TextFormula__c</fullName>
    <formula
  >IF(Allow_Downloads__c = True, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allow Downloads</label>
    <type>Text</type>
</CustomField>