force-app/main/default/objects/Case_Request__c/fields/Content_Posting_Courtesy_Seat_Name__c.field-meta.xml
<CustomField>
    <fullName>Content_Posting_Courtesy_Seat_Name__c</fullName>
    <label>Content Posting Courtesy Seat - Name</label>
    <type>TextArea</type>
</CustomField>