force-app/main/default/objects/Case_Request__c/fields/Content_Posting_Value_Add_Seat__c.field-meta.xml
<CustomField>
    <fullName>Content_Posting_Value_Add_Seat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Posting Value Add Seat</label>
    <type>Checkbox</type>
</CustomField>