force-app/main/default/objects/Case_Request__c/fields/Deactivate_User_s_TW__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_User_s_TW__c</fullName>
    <label>Deactivate User(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>