force-app/main/default/objects/Case_Request__c/fields/Details_NAV__c.field-meta.xml
<CustomField>
    <fullName>Details_NAV__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>