force-app/main/default/objects/Case_Request__c/fields/Files_Attached__c.field-meta.xml
<CustomField>
    <fullName>Files_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files Attached</label>
    <type>Checkbox</type>
</CustomField>