force-app/main/default/objects/Case_Request__c/fields/Files_Attached_TextFormula__c.field-meta.xml
<CustomField>
    <fullName>Files_Attached_TextFormula__c</fullName>
    <formula
  >IF(Files_Attached__c = True, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Files Attached</label>
    <type>Text</type>
</CustomField>