force-app/main/default/objects/Case_Request__c/fields/Final_Login_Report_NAV_TextFormula__c.field-meta.xml
<CustomField>
    <fullName>Final_Login_Report_NAV_TextFormula__c</fullName>
    <formula
  >IF(Final_Login_Report_NAV__c = True, &quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Login Report</label>
    <type>Text</type>
</CustomField>