force-app/main/default/objects/Case_Request__c/fields/Final_Login_Report_TW__c.field-meta.xml
<CustomField>
    <fullName>Final_Login_Report_TW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Login Report</label>
    <type>Checkbox</type>
</CustomField>