force-app/main/default/objects/Case_Request__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAV</fullName>
            </value>
            <value>
                <fullName>TW</fullName>
            </value>
            <value>
                <fullName>NAV &amp; TW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>