force-app/main/default/objects/Case_Request__c/fields/Membership_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Name</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Case Requests</relationshipLabel>
    <relationshipName>Case_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>