force-app/main/default/objects/Case_Request__c/fields/Navigator_Active_Level_Account__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Active_Level_Account__c</fullName>
    <formula>IF(
AND(Account_Name__r.DGN_Stage__c = &quot;Active&quot;,  Account_Name__r.DEN_Stage__c  = &quot;Active&quot;),
Account_Name__r.DGN_Membership_Contract_Level__c &amp;&quot; DGN | &quot;&amp; Account_Name__r.DEN_Membership_Contract_Level__c &amp;&quot; DEN&quot;,
IF(
Account_Name__r.DGN_Stage__c = &quot;Active&quot;,
Account_Name__r.DGN_Membership_Contract_Level__c &amp; &quot; DGN&quot;,
IF(
Account_Name__r.DEN_Stage__c  = &quot;Active&quot;,
Account_Name__r.DEN_Membership_Contract_Level__c &amp; &quot; DEN&quot;,
null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navigator Active Level</label>
    <type>Text</type>
</CustomField>