force-app/main/default/objects/Case_Request__c/fields/Navigator_Active_Level_Membership__c.field-meta.xml
<CustomField>
    <fullName>Navigator_Active_Level_Membership__c</fullName>
    <formula>IF(
AND(Membership_Name__r.DGN_Stage__c = &quot;Active&quot;, Membership_Name__r.DEN_Stage__c = &quot;Active&quot;),
Membership_Name__r.DGN_Membership_Level__c &amp;&quot; DGN | &quot;&amp; Membership_Name__r.DEN_Membership_Level__c &amp;&quot; DEN&quot;,
IF(
Membership_Name__r.DGN_Stage__c = &quot;Active&quot;,
Membership_Name__r.DGN_Membership_Level__c &amp; &quot; DGN&quot;,
IF(
Membership_Name__r.DEN_Stage__c = &quot;Active&quot;,
Membership_Name__r.DEN_Membership_Level__c &amp; &quot; DEN&quot;,
null
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Navigator Active Level</label>
    <type>Text</type>
</CustomField>