force-app/main/default/objects/Case_Request__c/fields/Report_Types_Multi__c.field-meta.xml
<CustomField>
    <fullName>Report_Types_Multi__c</fullName>
    <label>Report Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Alert Report</fullName>
            </value>
            <value>
                <fullName>Open Opps Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>