force-app/main/default/objects/Case_Request__c/fields/Special_License_Terms_NAV__c.field-meta.xml
<CustomField>
    <fullName>Special_License_Terms_NAV__c</fullName>
    <inlineHelpText
  >Client&apos;s special terms outside of standard membership deliverables</inlineHelpText>
    <label>Special License Terms</label>
    <type>TextArea</type>
</CustomField>