force-app/main/default/objects/Case_Request__c/fields/Submission_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Submission_Reminder__c</fullName>
    <formula
  >&quot;Please make sure all necessary FILES and EMAILS have been attached to this record before clicking Save&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission Reminder</label>
    <type>Text</type>
</CustomField>