force-app/main/default/objects/Case_Request__c/fields/Team_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Team_Name_s__c</fullName>
    <label>Team Name(s)</label>
    <type>TextArea</type>
</CustomField>