force-app/main/default/objects/Case_Request__c/fields/Techwire_Stage__c.field-meta.xml
<CustomField>
    <fullName>Techwire_Stage__c</fullName>
    <formula
  >Membership_Name__r.TW_Stage__c &amp; Account_Name__r.TW_Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Techwire Stage</label>
    <type>Text</type>
</CustomField>