force-app/main/default/objects/Case_Request__c/fields/Total_of_Users_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Users_Allowed__c</fullName>
    <label>Total # of Users Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>