force-app/main/default/objects/Case_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Membership__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Membership_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>