force-app/main/default/objects/Case_Request__c/listViews/Case_Requests_Draft.listView-meta.xml
<ListView>
    <fullName>Case_Requests_Draft</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Membership__c</columns>
    <columns>Type__c</columns>
    <columns>Files_Attached__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Membership_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Case Requests - Draft</label>
</ListView>